[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Wheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Body.png" type="Texture" id=2]
[ext_resource path="res://assets/Head.png" type="Texture" id=3]
[ext_resource path="res://scripts/Vehiche.gd" type="Script" id=4]
[ext_resource path="res://audio/engine_heavy_loop.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.5, 64 )

[node name="Vehicle" type="RigidBody2D"]
mass = 102.041
can_sleep = false
script = ExtResource( 4 )

[node name="Person" type="Sprite" parent="."]
position = Vector2( -17, -51 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Bodywork" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.18557e-08, -5.5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="BackWheel" parent="." instance=ExtResource( 1 )]
position = Vector2( -48, 38 )
can_sleep = false

[node name="FrontWheel" parent="." instance=ExtResource( 1 )]
position = Vector2( 39, 38 )
can_sleep = false

[node name="PinBack" type="PinJoint2D" parent="."]
position = Vector2( -48, 38 )
node_a = NodePath("..")
node_b = NodePath("../BackWheel")
softness = 0.3

[node name="PinFront" type="PinJoint2D" parent="."]
position = Vector2( 39, 38 )
node_a = NodePath("..")
node_b = NodePath("../FrontWheel")
softness = 0.3

[node name="SomMotor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.8
autoplay = true
